# bigearthnet_encoder

./: .autorc  .buildinfo  .gitignore  00_general.html  02_conversion_process.html  05_lmdb.html  06_lmdb_example.html  10_squirrel_thoughts.html  CHANGELOG.md  README.md  api.html  api_encoder.html  genindex.html  intro.html  justfile  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.auto/: update_version.sh
.doctrees/: 00_general.doctree  02_conversion_process.doctree  05_lmdb.doctree  06_lmdb_example.doctree  10_squirrel_thoughts.doctree  api.doctree  api_encoder.doctree  environment.pickle  intro.doctree
.doctrees/general/: code_of_conduct.doctree  dependencies.doctree  license.doctree
.github/: CONTRIBUTING.md  config.yml
.github/workflows/: main.yml  skip_test.yml  test.yml
_recs/: 05_lmdb-asciinema-0.rec
_sources/: 00_general.md.txt  05_lmdb.md.txt  06_lmdb_example.ipynb.txt
bigearthnet_encoder/: _tif_reader.py  encoder.py  metadata_utils.py  s2_encoder.py  squirrel_ext.py
bigearthnet_encoder/tiny.db/: data.mdb  lock.mdb
docs/: 00_general.md  02_conversion_process.md  05_lmdb.md  06_lmdb_example.ipynb  10_squirrel_thoughts.md  api_encoder.md  conf.py
docs/images/: squirrel_shuffle.excalidraw
general/: code_of_conduct.html  dependencies.html  license.html
notebooks/: squirrel.ipynb  train.py
src/bigearthnet_encoder/: __init__.py  _tif_reader.py  encoder.py
tests/: __init__.py  encoder_test.py  meta_test.py  s2_encoder_test.py  tif_reader_test.py  tiny
tests/s1-tiny/S1A_IW_GRDH_1SDV_20170617T064724_29UPU_36_85/: S1A_IW_GRDH_1SDV_20170617T064724_29UPU_36_85_VH.tif  S1A_IW_GRDH_1SDV_20170617T064724_29UPU_36_85_VV.tif  S1A_IW_GRDH_1SDV_20170617T064724_29UPU_36_85_labels_metadata.json
tests/s1-tiny/S1A_IW_GRDH_1SDV_20170617T064724_29UPU_4_55/: S1A_IW_GRDH_1SDV_20170617T064724_29UPU_4_55_VH.tif  S1A_IW_GRDH_1SDV_20170617T064724_29UPU_4_55_VV.tif  S1A_IW_GRDH_1SDV_20170617T064724_29UPU_4_55_labels_metadata.json
tests/s1-tiny/S1A_IW_GRDH_1SDV_20171221T064238_29SND_56_35/: S1A_IW_GRDH_1SDV_20171221T064238_29SND_56_35_VH.tif  S1A_IW_GRDH_1SDV_20171221T064238_29SND_56_35_VV.tif  S1A_IW_GRDH_1SDV_20171221T064238_29SND_56_35_labels_metadata.json
