[tool.poetry]
name = "bigearthnet_encoder"
version = "0.1.1"
description = "A flexible BigEarthNet encoder that allows one to quickly convert BigEarthNet to a DL-optimization data format."
authors = ["Kai Norman Clasen <k.clasen@protonmail.com>"]
license = "MIT license"
readme = "README.md"
homepage = "https://github.com/kai-tub/bigearthnet_encoder/"
repository = "https://github.com/kai-tub/bigearthnet_encoder/"

documentation = "https://github.com/kai-tub.github.io/bigearthnet_encoder"

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
# TODO: Find a better way to set these values!
python = "^3.8"
numpy = "^1.19"
lmdb = "^1.3.0"
pydantic = "^1.9.0"
fastcore = "^1.3.27"
bigearthnet-patch-interface = "^0.1"
rich = "^10|^11|^12|^13"
bigearthnet-common = "^2"
pandas = "^1.3.5"
# torch = "^1.10.1"
# pyarrow = "^6.0.1"
# geopandas = "^0.10.2"
# matplotlib = "^3.5.1"
# leafmap = "^0.7.5"
# mapclassify = "^2.4.3"
rasterio = {version = "^1.2.10", allow-prereleases = true}

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
Sphinx = "^4.5"
furo = "*"
livereload = "*"
sphinx-external-toc = "*"
pre-commit = "*"
myst-nb = "0.14"
ipykernel = "*"
linkify-it-py = "*"
pyarrow = "^7.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ben_encoder = "bigearthnet_encoder.encoder:encoder_cli"
