[tool.poetry]
name = "bigearthnet_encoder"
version = "0.2.0"
description = "A flexible BigEarthNet encoder that allows one to quickly convert BigEarthNet to a DL-optimization data format."
authors = ["Kai Norman Clasen <k.clasen@protonmail.com>"]
license = "MIT license"
readme = "README.md"
homepage = "https://github.com/kai-tub/bigearthnet_encoder/"
repository = "https://github.com/kai-tub/bigearthnet_encoder/"

documentation = "https://github.com/kai-tub.github.io/bigearthnet_encoder"

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
# TODO: Find a better way to set these values!
python = ">=3.8,<=3.10"
numpy = "^1.19"
lmdb = "^1.3.0"
pydantic = "^1.9.0"
fastcore = "^1.3.27"
bigearthnet-patch-interface = "^0.1"
rich = "^10|^11|^12|^13"
bigearthnet-common = "^2"
pandas = "^1.3.5"
rasterio = {version = "^1.2.10", allow-prereleases = true}
rich-click = {extras = ["typer"], version = "^1.3.2"}

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
Sphinx = "^4.5"
furo = "*"
livereload = "*"
sphinx-external-toc = "*"
pre-commit = "*"
myst-nb = "^0.15"
ipykernel = "*"
linkify-it-py = "*"
pyarrow = "^7.0.0"
sphinxcontrib-mermaid = "^0.7.1"
torch = "^1.11.0"
scikit-image = "^0.19.2"
matplotlib = "^3.5.2"
ipywidgets = "^7.7.0"
sphinx-cli-recorder = "^0.1.5"
icecream = "^2.1.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ben_encoder = "bigearthnet_encoder.encoder:encoder_cli"
